--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             right: 0;
             bottom: 0;
             background: 
-                url('imagens/fundo.webp') center/cover,
+                url('Imagens/fundo - Copia.webp') center/cover,
                 radial-gradient(circle at 20% 20%, rgba(74, 144, 226, 0.15) 0%, transparent 50%),
                 radial-gradient(circle at 80% 80%, rgba(255, 215, 0, 0.1) 0%, transparent 50%);
             pointer-events: none;
@@ -1249,7 +1249,7 @@
                     <div class="hero-badge">A MAIOR COLEÇÃO DIGITAL DO BRASIL</div>
                     <h1><span class="highlight-number">+70.000</span> HQS COMPLETAS</h1>
                 <h2>O QUE VOCÊ VAI RECEBER:</h2>
-                <img src="imagens/mockup.webp" alt="Mockup do App" class="hero-mockup">
+                <img src="Imagens/mockup - Copia.webp" alt="Mockup do App" class="hero-mockup">
                 <p>Marvel Completa, DC Comics, HQs Nacionais e Edições Raras. Tudo organizado e em alta qualidade!</p>
                 <a href="#pricing" class="cta-button">QUERO ACESSO AGORA</a>
             </div>
