--- a/index.html
+++ b/index.html
@@ -2482,10 +2482,7 @@
         <div class="container">
             <h2 class="section-title">POR DENTRO DO NOSSO APP:</h2>
             <div class="video-container" style="margin: 2rem auto; max-width: 800px;">
-                <script src="https://fast.wistia.com/player.js" async></script>
-                <script src="https://fast.wistia.com/embed/m5uogzhwyc.js" async type="module"></script>
-                <style>wistia-player[media-id='m5uogzhwyc']:not(:defined) { background: center / contain no-repeat url('https://fast.wistia.com/embed/medias/m5uogzhwyc/swatch'); display: block; filter: blur(5px); padding-top:177.78%; }</style> 
-                <wistia-player media-id="m5uogzhwyc" aspect="0.5625"></wistia-player>
+                <script src="https://fast.wistia.com/player.js" async></script><script src="https://fast.wistia.com/embed/ho9863ssow.js" async type="module"></script><style>wistia-player[media-id='ho9863ssow']:not(:defined) { background: center / contain no-repeat url('https://fast.wistia.com/embed/medias/ho9863ssow/swatch'); display: block; filter: blur(5px); padding-top:177.78%; }</style> <wistia-player media-id="ho9863ssow" aspect="0.5625"></wistia-player>
             </div>
         </div>
     </section>
