--- a/index.html
+++ b/index.html
@@ -2954,8 +2954,8 @@
     <section class="guarantee">
         <div class="container">
             <div class="guarantee-content">
-                <img src="Imagens/selo30d.png" alt="Selo de Garantia" class="guarantee-seal">
-                <h3>Garantia Blindada de 30 Dias</h3>
+                <img src="Imagens/selo.webp" alt="Selo de Garantia" class="guarantee-seal">
+                <h3>Garantia Blindada de 7 Dias</h3>
                 <p>Seu risco é zero. Se por qualquer motivo não gostar, devolvemos 100% do seu dinheiro.</p>
             </div>
         </div>
